Add a list of arguments to AppExpressions